2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Implemented a part of the assembler

    * las/arch/x86_64/main.c: Added the CMP instruction

    * las/arch/x86_64/main.c: Added the CMPXCHG instruction


2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the BSR instruction

    * las/arch/x86_64/main.c: Added the BSWAP instruction

    * las/arch/x86_64/main.c: Added the BT instruction

    * las/arch/x86_64/main.c: Added the BTC instruction

    * las/arch/x86_64/main.c: Added the BTR instruction

    * las/arch/x86_64/main.c: Added the BTS instruction

    * las/arch/x86_64/main.c: Added the CBW/CWDE/CDQE instructions

    * las/arch/x86_64/main.c: Added the CLFLUSH instruction

    * las/arch/x86_64/main.c: Added the CLI instruction


2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the BSF instruction


2013-12-05  Hirochika Asai  <asai@scyphus.co.jp>

    * las/las.h: Added the definitions of operand size
    * las/arch/x86_64/eval.h: Added the definitions of operand size
    * las/arch/x86_64/reg.c: Changed to use the SIZE constants

    * las/arch/x86_64/main.c: Implemented ADD instruction

    * las/arch/x86_64/main.c: Implemented AND instruction

    * las/las.h: Fixed the operand and address size prefix
    * las/parser.c: Fixed the operand and address size prefix parser
    * las/arch/x86_64/eval.c: Fixed the operand and address size prefix
                              evaluation
    * las/arch/x86_64/eval.h: Fixed the operand and address size prefix
                              evaluation


2013-12-04  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.h: Fixed the definition of op_reg enum

    * las/arch/x86_64/main.c: Implemented ModR/M and SIB encoder
    * las/arch/x86_64/eval.h: Implemented ModR/M and SIB encoder

    * las/arch/x86_64/main.c: Implemented OI and MI operand encoder and MOV
                              instruction