@@ -6,6 +6,8 @@
 
     * las/arch/x86_64/main.c: Added the CMPXCHG instruction
 
+    * las/arch/x86_64/main.c: Added the CPUID instruction
+
 
 2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>
 
